--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
   	<div class="col-md-9" ng-view></div>
   </div>
 </div>
+<!-- base functional -->
+<script src="lib/underscore/1.8.3/underscore-min.js"></script>
 <!-- base angular -->
 <script src="lib/angular/1.5.9/angular.min.js"></script>
 <script src="lib/angular/1.5.9/angular-route.min.js"></script>
