--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Ruben SONG</title>
+<title>Ruben - Blog</title>
 
 <link rel="stylesheet" href="lib/bootstrap/3.3.7/css/bootstrap.cerulean.min.css">
 <!--[if lt IE 9]>
