--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
 <!-- base angular -->
 <script src="lib/angular/1.5.9/angular.min.js"></script>
 <script src="lib/angular/1.5.9/angular-route.min.js"></script>
+<script src="lib/angular/1.5.9/angular-animate.js"></script>
 <script src="js/app.js"></script>
+<!-- ui -->
+<!-- <script src="lib/directives/ui/bootstrap/2.3.1/ui-bootstrap-tpls-2.3.1.min.js"></script> -->
 <!-- Post -->
 <script src="js/controller/Post/CreatePostController.js"></script>
 <script src="js/controller/Post/ListPostController.js"></script>
