--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@
 			</ul>				
 		</div>
   	</div>
-  	<div class="col-md-9" ng-view></div>
-  </div>
+	<div class="col-md-9" ng-cloak ng-view>
+	</div>
 </div>
 <!-- base functional -->
 <script src="lib/underscore/1.8.3/underscore-min.js"></script>
 <!-- base angular -->
 <script src="lib/angular/1.5.9/angular.min.js"></script>
 <script src="lib/angular/1.5.9/angular-route.min.js"></script>
-<script src="lib/angular/1.5.9/angular-animate.js"></script>
+<script src="lib/angular/1.5.9/angular-animate.min.js"></script>
 <script src="js/app.js"></script>
 <!-- ui -->
-<!-- <script src="lib/directives/ui/bootstrap/2.3.1/ui-bootstrap-tpls-2.3.1.min.js"></script> -->
+<script src="lib/directives/ui/bootstrap/2.3.1/ui-bootstrap-tpls-2.3.1.min.js"></script>
 <!-- Post -->
 <script src="js/controller/Post/CreatePostController.js"></script>
 <script src="js/controller/Post/ListPostController.js"></script>
@@ -103,3 +103,4 @@
 <script src="js/services/WebApiConfig.js"></script>
 </body>
 </html>
+  			</div>
